[package]
name = "hypervisor"
version = "0.1.0"
authors = ["Microsoft Authors"]
edition = "2021"
license = "Apache-2.0 OR BSD-3-Clause"

[features]
kvm = ["kvm-ioctls", "kvm-bindings"]
mshv = ["mshv-ioctls", "mshv-bindings"]
tdx = []
snp = []

[dependencies]
anyhow = "1.0.65"
byteorder = "1.4.3"
thiserror = "1.0.37"
libc = "0.2.135"
log = "0.4.17"
kvm-ioctls = { version = "0.11.0", optional = true }
kvm-bindings = { git = "https://github.com/cloud-hypervisor/kvm-bindings", branch = "ch-v0.5.0-tdx", features = ["with-serde", "fam-wrappers"], optional  = true }
mshv-bindings = { path = "../../mshv/mshv-bindings", features = ["with-serde", "fam-wrappers"], optional  = true }
mshv-ioctls = { path = "../../mshv/mshv-ioctls", optional  = true}
serde = { version = "1.0.145", features = ["rc", "derive"] }
serde_with = { version = "2.0.1", default-features = false, features = ["macros"] }
vfio-ioctls = { path = "../../vfio/crates/vfio-ioctls", default-features = false }
vm-memory = { version = "0.9.0", features = ["backend-mmap", "backend-atomic"] }
vmm-sys-util = { version = "0.10.0", features = ["with-serde"] }

[target.'cfg(target_arch = "x86_64")'.dependencies.iced-x86]
version = "1.17.0"
default-features = false
features = ["std", "decoder", "op_code_info", "instr_info", "fast_fmt"]

[dev-dependencies]
env_logger = "0.9.1"
